deploy/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ci-helper-app
spec:
  replicas: 1
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: ci-helper-app
          command: ["/ci-helper-app"]
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      securityContext:
        runAsNonRoot: true
