deploy/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ci-helper-app
  namespace: ci-helper-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  to:
    kind: Service
    name: ci-helper-app
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
